examples/kfserving/sklearn/v1beta1/v1-admin/authorizationpolicy-cluster-local-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cluster-local-gateway
  namespace: admin
spec:
  selector:
    matchLabels:
      component: predictor
  rules:
    - from:
        - source:
            principals:
              - >-
                cluster.local/ns/istio-system/sa/cluster-local-gateway-service-account
